--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,6 +13,9 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-aria.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-messages.min.js"></script>
 
   </head>
   <body ng-app="coursExoApp">
@@ -22,8 +25,9 @@
         <ul class="nav nav-tabs" ng-controller="HeaderController">
          <li role="presentation" ng-controller='TagController' class="active"><a href="#"><i class="fa fa-home"></i> {{ message }} </a></li>
 	  <li  ng-click='toggleMenu()'><a ng-href="#Projects">Projects</a></li>
-          <li  ng-click='toggleMenu()'><a ng-href="#Profiles">Profiles</a></li>
-	  <li ng-click='toggleMenu()'><a ng-href="#UsersStories">Users stories</a></li>
+      	  <li ng-click='toggleMenu()'><a ng-href="#UsersStories">Users stories</a></li>
+	 <li  ng-click='toggleMenu()'><a ng-href="#Tasks">Tasks</a></li>
+
              <li role="presentation" class="dropdown">
     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
       New <span class="caret"></span>
@@ -31,6 +35,7 @@
     <ul class="dropdown-menu">
       <li ng-click='toggleMenu()'><a ng-href="#NewProject">Project</a></li>
       <li ng-click='toggleMenu()'><a ng-href="#NewUserStory">User Story</a></li>
+      <li ng-click='toggleMenu()'><a ng-href="#NewTask">Task</a></li>
     </ul>
   </li>
           </ul>
